tests/machine/x/cobol/map_literal_dynamic.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/map_literal_dynamic.cob:10: error: syntax error, unexpected Identifier
/workspace/mochi/tests/machine/x/cobol/map_literal_dynamic.cob:11: error: syntax error, unexpected Identifier

