tests/machine/x/cobol/map_literal_dynamic.cob
*> Generated by Mochi compiler v0.10.26 on 2025-07-16T15:32:17Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. MAP-LITERAL-DYNAMIC.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 X PIC 9 VALUE 3.
       01 Y PIC 9 VALUE 4.
       01 M.
           05 A PIC 9 VALUE X.
           05 B PIC 9 VALUE Y.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       COMPUTE TMP = X
       COMPUTE TMP = Y
       DISPLAY TMP TMP
       STOP RUN.
